# runtime_dependency_manager

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
runtime_dependency_manager/: __init__.py  manager.py
scripts/: get_version.sh
tests/: test_runtime_dependency_manager.py
