[metadata]
name = runtime_dependency_manager
description = A simple Python module for managing dependencies at runtime
long_description = file: README.md
long_description_content_type = text/markdown
author = Carl Corliss
author_email = rabbitt@gmail.com
url = https://github.com/rabbitt/runtime_dependency_manager
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    packaging
python_requires = >=3.9
include_package_data = true
setup_requires = setuptools_scm

[options.extras_require]
dev =
    pytest

[options.package_data]
* = *.md, LICENSE

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool:pytest]
testpaths = tests
